# zerostart

./: .gitignore  CLAUDE.md  LICENSE  README.md  gpu.jsonc  install.sh
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml
benches/: bench_50.sh  bench_cold_start.sh  bench_packages.sh  bench_readme.sh  e2e_progressive.sh  e2e_pyo3_progressive.sh  e2e_verify.sh  policy_sweep.sh
benches/results/: bench.csv  bench_50.csv  packages.csv  policy_sweep.csv
benches/zerostart/: bench_inference.sh  bench_progressive.sh  bench_torch.sh  gpu.jsonc  inference_server.py  torch_only.py
crates/: Cargo.toml
crates/zs-fast-wheel/: Cargo.toml  pyproject.toml
crates/zs-fast-wheel/src/: daemon.rs  demand.rs  download.rs  extract.rs  lib.rs  main.rs  manifest.rs  pipeline.rs  pymodule.rs  queue.rs  resolve.rs  status.rs  streaming.rs
crates/zs-snapshot/: Cargo.toml
crates/zs-snapshot/src/: doctor.rs  dump.rs  error.rs  lib.rs  main.rs  metadata.rs  restore.rs  types.rs
docs/: test-plan.md
planning/accelerate/: 01-accelerate-hooks.md  02-model-cache.md  03-integrations.md  README.md
python/: pyproject.toml
python/tests/: demo_app.py  test_e2e_uv.py  test_fingerprint.py  test_gpu_lazy.py  test_lazy_imports.py  test_pyo3.py  test_ready.py  test_resolver.py  test_sdk.py  test_snapshot.py  test_supervisor.py
python/zerostart/: __init__.py  accelerate.py  cache.py  entrypoints.py  fingerprint.py  lazy_imports.py  model_cache.py  ready.py  resolver.py  run.py  sdk.py  snapshot.py  supervisor.py
python/zerostart/integrations/: __init__.py  comfyui.py  serving.py  vllm.py
scripts/: cross-compile.sh
tests/: Dockerfile.test  bench_accelerate.sh  bench_gpu_hydrate.sh  bench_hydrate_strategies.py  bench_model_load.sh  bench_serve.py  bench_zs_only.sh  debug_torch.py  dmtcp_debug.sh  dmtcp_experiment.sh  docker_smoke.sh  gpu_ai_bench.sh  gpu_test_runner.sh  simpletuner_bench.sh  test_e2e_cold_start.sh  test_snapshot.sh  test_vllm_integration.sh
tests/criu/: test_http_service.py  test_restore_callback.py  test_trivial.sh
tools/: bench-torch-install.sh  probe-all-gpus.sh  probe-gpu-env.sh  test-torch-install-time.sh  test-uv-cache-inject.sh
