[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zerostart"
version = "0.1.0"
description = "Fast Python package runner with progressive loading — like uvx but with streaming extraction"
requires-python = ">=3.10"

[project.scripts]
zerostart = "zerostart.run:main"

[tool.setuptools.packages.find]
where = ["."]
