[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zerostart"
version = "0.1.0"
description = "Fast Python package runner with progressive loading — like uvx but with streaming extraction"
requires-python = ">=3.10"
readme = "../README.md"
license = "MIT"
authors = [{ name = "gpu-cli" }]
keywords = ["python", "gpu", "cold-start", "wheel", "package-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/gpu-cli/zerostart"
Repository = "https://github.com/gpu-cli/zerostart"
Issues = "https://github.com/gpu-cli/zerostart/issues"

[project.scripts]
zerostart = "zerostart.run:main"

[tool.setuptools.packages.find]
where = ["."]
