[package]
name = "zs-fast-wheel"
version = "0.1.0"
edition = "2024"
description = "Fast parallel Python wheel downloader + extractor with streaming support"
license = "MIT"
repository = "https://github.com/gpu-cli/zerostart"

[[bin]]
name = "zerostart"
path = "src/main.rs"

[lib]
name = "zs_fast_wheel"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP downloads
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json", "blocking"] }
futures = "0.3"

# Zip extraction
zip = { version = "2", default-features = false, features = ["deflate"] }

# io_uring for Linux
io-uring = { version = "0.7", optional = true }

# Memory mapping
memmap2 = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Progress
indicatif = "0.17"

# Misc
tempfile = "3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["fs", "mman"] }
rayon = "1"
urlencoding = "2"
flate2 = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

[features]
default = []
iouring = ["io-uring"]
python = ["pyo3"]
