[package]
name = "zs-snapshot"
version = "0.1.0"
edition = "2024"
description = "CRIU process snapshot wrapper for zerostart"
license = "Apache-2.0"

[[bin]]
name = "zs-snapshot"
path = "src/main.rs"

[lib]
name = "zs_snapshot"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
